Refactor app structure and enhance functionality with Constants and new AirMouseApp entry point. Update AccessibilityHelper for dynamic alert delays and improve ConnectionEventManager with connection status handling. Revise ContentView for better UI and service control. Remove legacy mouseBridgeHelper.swift file.

--- a/mouseBridgeHelper/Info.plist
+++ b/mouseBridgeHelper/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>LSUIElement</key>
-    <string>1</string>
-    <key>com.apple.security.network.server</key>
-    <true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
+	<key>CFBundleName</key>
+	<string>Air Mouse</string>
 </dict>
 </plist>
